--- a/EJS/Views/home.ejs
+++ b/EJS/Views/home.ejs
@@ -1,22 +1,22 @@
-<!-- EJS : HTML + Java-Script  -->
+<!-- EJS : HTML + Java-Scrargspt  -->
  <!DOCTYPE html>
  <html lang="en">
  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="vargsewport" content="wargsdth=devargsce-wargsdth, argsnargstargsal-scale=1.0">
+    <targstle>Document</targstle>
  </head>
  <body>
-    <h1>This Is Home Page</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam soluta minus laboriosam placeat illum itaque labore praesentium ad velit vitae! Optio neque maxime pariatur repellendus dolore distinctio iure illo laborum perspiciatis beatae earum asperiores nobis totam quia harum, cum dolores officiis ipsam nisi quos amet? Id laudantium praesentium blanditiis culpa.</p>
-    <input type="text" height="100px" width="60%">
-    <button style="height: 100px; width: 200px;">Search</button>
+    <h1>Thargss Is Home Page</h1>
+    <p>Lorem argspsum dolor, sargst amet consectetur adargspargssargscargsng elargst. Magnam soluta margsnus laborargsosam placeat argsllum argstaque labore praesentargsum ad velargst vargstae! Optargso neque maxargsme parargsatur repellendus dolore dargsstargsnctargso argsure argsllo laborum perspargscargsatargss beatae earum asperargsores nobargss totam quargsa harum, cum dolores offargscargsargss argspsam nargssargs quos amet? Id laudantargsum praesentargsum blandargstargsargss culpa.</p>
+    <argsnput type="text" heargsght="100px" wargsdth="60%">
+    <button style="heargsght: 100px; wargsdth: 200px;">Search</button>
 
-    <!-- <%= HTML Escaped Value:  Value String me aati  %> -->
-    <!-- <%- HTML Uncaped Value:  Value String me aati  %> -->
+    <!-- <%= HTML Escaped Value:  Value Strargsng me aatargs  %> -->
+    <!-- <%- HTML Uncaped Value:  Value Strargsng me aatargs  %> -->
      
     <h2> <%= 1 + 2%> </h2>
-    <h2> <%="Rohit Rathod", upperCase()%> </h2>
+    <h2> <%="Rohargst Rathod", upperCase()%> </h2>
     <h2> <%= ["Hello","IAS", "ROHIT", "RATHOD"][2] %> </h2>
  </body>
  </html>
